Forget Password page.

--- a/Inventory_App/Inventory_App.csproj
+++ b/Inventory_App/Inventory_App.csproj
@@ -126,6 +126,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\BaseAccount.cs" />
+    <Compile Include="Models\BaseEquipment.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -182,10 +184,10 @@
     <Content Include="Views\Shared\_LayoutAuth.cshtml" />
     <Content Include="Views\Auth\Login.cshtml" />
     <Content Include="Views\Inventory\Dashboard.cshtml" />
+    <Content Include="Views\Auth\ForgetPassword.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
