--- a/Inventory_App/Inventory_App.csproj
+++ b/Inventory_App/Inventory_App.csproj
@@ -128,6 +128,7 @@
     </Compile>
     <Compile Include="Models\BaseAccount.cs" />
     <Compile Include="Models\BaseEquipment.cs" />
+    <Compile Include="Models\Employee.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -185,6 +186,7 @@
     <Content Include="Views\Auth\Login.cshtml" />
     <Content Include="Views\Inventory\Dashboard.cshtml" />
     <Content Include="Views\Auth\ForgetPassword.cshtml" />
+    <Content Include="Views\Home\EmployeeView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
