--- a/Inventory_App/Web.config
+++ b/Inventory_App/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="ConnString" connectionString="Server=.\SQLEXPRESS;Database=OST_Inventory;Trusted_Connection=True;" />
+    <add name="ConnString" connectionString="Server=.\SQLEXPRESS;Database=OST;Trusted_Connection=True;" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
